feat: 사업자번호 상태 조회 api 추가 (#107)
* feat: 사업자등록 상태조회/진위여부 API 추가 #50

* test: 사업자등록 상태조회/진위여부 API 테스트 및 문서화 추가 #50

* test: 진위여부 확인 API는 derecated 처리 #50

* fix: 진위여부 api request body 수정 #50

* style: 진위여부 API deprecated 처리 X #50
